ai_platform_setup/deploy/velero-deployment.yaml
apiVersion: velero.io/v1
kind: Deployment
metadata:
  name: velero
  namespace: velero
spec:
  replicas: 1
  selector:
    matchLabels:
      component: velero
  template:
    metadata:
      labels:
        component: velero
    spec:
      containers:
        - name: velero
          image: velero/velero:v1.6.0
          command:
            - velero
          args:
            - server
            - --plugins
            - velero-plugin-for-aws:v1.0.0
